<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:transitionGroup="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".item.ItemEditFragment">

    <!--Add Scroll View-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|center"
            android:orientation="vertical">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appBarLayout"
                style="@style/AppBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/topAppBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="0dp"
                    android:theme="@style/Toolbar_Theme"
                    app:title="@string/edit_item"
                    app:menu="@menu/image_edit"
                    app:navigationIcon="@drawable/baseline_arrow_back_24"
                    app:titleTextAppearance="@style/Toolbar_Title" />
            </com.google.android.material.appbar.AppBarLayout>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                style="@style/CardViewSquare">
                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/item_image"
                    android:visibility="invisible"
                    app:srcCompat="@drawable/placeholder_image"/>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/item_name"
                app:endIconMode="clear_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:minHeight="48dp"
                style="@style/HintColor">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/item_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/item_name"
                    style="@style/PoppinsBodyText14" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/item_description"
                app:endIconMode="clear_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:minHeight="48dp"
                style="@style/HintColor">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/item_description_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/item_description"
                    style="@style/PoppinsBodyText14" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/item_category"
                style="@style/HintColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:minHeight="48dp"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/item_category_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/item_category"
                    style="@style/PoppinsBodyText14"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_margin="10dp">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/item_location"
                    app:endIconMode="clear_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:layout_marginStart="150dp"
                    android:layout_marginEnd="5dp"
                    style="@style/HintColor">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/item_location_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:hint="@string/Item_last_location"
                        style="@style/PoppinsBodyText14" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/item_price"
                    app:endIconMode="clear_text"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:layout_marginEnd="150dp"
                    style="@style/HintColor">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/item_price_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:hint="@string/item_price"
                        style="@style/PoppinsBodyText14" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_margin="10dp">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/item_quantity"
                    app:endIconMode="clear_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    style="@style/HintColor">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/item_quantity_edit_text"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:hint="@string/quantity"
                        android:text="@string/quantity_value"
                        style="@style/PoppinsBodyText14" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/update_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/content_description_update_item"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/baseline_check_24" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>