<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gettingstarted_graph"
    app:startDestination="@id/introFragment">

    <fragment
        android:id="@+id/introFragment"
        android:name="com.example.inventorymanager.gettingstarted.IntroFragment"
        android:label="fragment_intro"
        tools:layout="@layout/fragment_intro" >
        <action
            android:id="@+id/action_introFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.inventorymanager.gettingstarted.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
    </fragment>
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.inventorymanager.gettingstarted.RegisterFragment"
        android:label="fragment_register"
        tools:layout="@layout/fragment_register" >
        <action
            android:id="@+id/action_registerFragment_to_registerSuccessFragment"
            app:destination="@id/registerSuccessFragment" />
    </fragment>
    <fragment
        android:id="@+id/registerSuccessFragment"
        android:name="com.example.inventorymanager.gettingstarted.RegisterSuccessFragment"
        android:label="fragment_register_success"
        tools:layout="@layout/fragment_register_success" >
        <action
            android:id="@+id/action_registerSuccessFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>
</navigation>